// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Webpack loader calls through to convert function 1`] = `
Array [
  Array [
    "---
---
# Fun test times!
      ",
    Object {},
  ],
]
`;

exports[`Webpack loader passes custom options through 1`] = `
Array [
  Array [
    "---
---
# Fun test times!
      ",
    Object {
      "markdownItPlugins": Array [
        [Function],
        [Function],
      ],
      "passElementProps": true,
    },
  ],
]
`;
